name:                foopkg-internal
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.23

library foointernal
  exposed-modules:     InternalLib
  build-depends:       base
  default-language:    Haskell2010

library
  exposed-modules:     Lib
  build-depends:       base, foointernal
  default-language:    Haskell2010
